--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   smooth_page_indicator: ^1.1.0
+  intl: ^0.19.0
+  fluttertoast: ^8.2.5
 
 dev_dependencies:
   flutter_test:
